# UKey-API

./: LICENSE  README.md
CSP/smartcard/: CMakeLists.txt  SmartCard.c
CSP/smartcard/Driver/: MiniDriver.c  SmartCards.c
CSP/smartcard/Tracer/: trace.c  trace.h
MSC/: main.py
SDK/: opensc-0.15.0-win32.msi
SDK/Feitian ePass 3000/Linux-1.1/include/: auxiliary.h  cryptoki_ft.h  pkcs11.h
SDK/Feitian ePass 3000/Linux-1.1/sample/: readme.txt
SDK/Feitian ePass 3000/Linux-1.1/sample/EnumObj/: Makefile
SDK/Feitian ePass 3000/Linux-1.1/sample/GetPinInfo/: GetPinInfo.cpp  GetPinInfo.h  Makefile
SDK/Feitian ePass 3000/Linux-1.1/sample/GetTimer/: GetTimer.cpp  main.cpp
SDK/Feitian ePass 3000/Linux-1.1/sample/GetTokenInfo/: main.cpp
SDK/Feitian ePass 3000/Windows-1.3/Docs/: License_zh-CN.rtf  README.zh-CN.txt
SDK/Feitian ePass 3003/ePass3003-Manage/: epass3003.ini
SDK/Feitian ePass 3003/ePass3003-Manage/lang/: escertd_1028.lng  escertd_1033.lng  escertd_2052.lng  escsp_1028.lng  escsp_1033.lng  escsp_2052.lng  esmgr_1028.lng  esmgr_1033.lng  esmgr_2052.lng
SDK/Feitian ePass 3003/国富安ePass-Tool/Program/: ca30.html  change_manu.bat  config.xml  ds20sign.html  gfa_app_demo.html  gfa_app_demo2.html  gfa_sec_lib.js  gfa_sec_lib2.js  gfa_service.bat  kill_gfa_service.bat
SDK/JDKey okPass/ISO/: okPass.iso  okPass.sig  okPassAFormat.ini
SDK/ePass 3000/: README.MD
SDK/ePass 3000/Linux-1.1/include/: cryptoki_linux.h  notifymsg.h  pkcs11t.h
SDK/ePass 3000/Linux-1.1/sample/: Makefile
SDK/ePass 3000/Windows-1.3/PKI/: README.zh-CN.txt
(+226 files in other folders)
